--- a/funcAppBuildPipeline.yaml
+++ b/funcAppBuildPipeline.yaml
@@ -8,6 +8,12 @@ steps:
     projects: '**/*.csproj'
     arguments: '--output publish_output --configuration Release'
 
+- task: DotNetCoreCLI@2
+  inputs:
+    command: test
+    projects: '**/*Tests/*.csproj'
+    arguments: '--configuration $(buildConfiguration)'
+
 - task: ArchiveFiles@2
   displayName: 'Archive files'
   inputs:
