--- a/funcAppBuildPipeline.yaml
+++ b/funcAppBuildPipeline.yaml
@@ -9,6 +9,7 @@ steps:
     arguments: '--output publish_output --configuration Release'
 
 - task: DotNetCoreCLI@2
+  displayName: 'Run Tests'
   inputs:
     command: test
     projects: '**/*Tests/*.csproj'
