--- a/funcAppBuildPipeline.yaml
+++ b/funcAppBuildPipeline.yaml
@@ -15,7 +15,7 @@ steps:
   displayName: 'Run Tests'
   inputs:
     command: test
-    projects: '${{ parameters.testfilesPattern }}'
+    projects: '**/*Tests/*.csproj'
     arguments: '--configuration $(buildConfiguration)'
 
 - task: ArchiveFiles@2
